<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_message"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/subtitle"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/step_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/instruction_one"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/status_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_one"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enabled"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/step_one_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_one"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/status_one"
        android:src="@drawable/ic_enabled" />

    <TextView
        android:id="@+id/steps_one_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_one_check"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/open_developer_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps_one_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/open_settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/instruction_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/open_developer_options"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/instruction_two"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/status_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction_two"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enabled"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/status_two_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction_two"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/status_one"
        android:src="@drawable/ic_enabled" />

    <TextView
        android:id="@+id/steps_two_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_two_check"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/enable_usb_debugging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps_two_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/open_developer_options"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enable_usb_debugging"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/rate_this_app"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/share_this_app"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>